#152130766: Neutron JMX admin